# Augent

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  install.sh  pyproject.toml  setup.cfg  setup.py  setup.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  stale.yml  tests.yml
augent/: __init__.py  __main__.py  banner.py  cache.py  cli.py  clips.py  config.py  core.py  embeddings.py  export.py  graph.py  mcp.py  memory.py  search.py  separator.py  speakers.py  tts.py  web.py
openclaw/: SKILL.md  skill.json
setup/: obsidian-txt-setup.txt
skills/augent/: SKILL.md
tests/: __init__.py  test_cache.py  test_clips.py  test_config.py  test_export.py  test_graph.py  test_handlers.py  test_mcp.py  test_memory.py  test_search.py  test_semantic.py  test_separator.py  test_spaces.py  test_speakers.py
