[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "augent"
version = "1.0.0"
description = "Local audio keyword search using faster-whisper with caching, proximity search, and multiple export formats"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "AugentDevs"}
]
keywords = [
    "audio",
    "transcription",
    "whisper",
    "faster-whisper",
    "keyword",
    "search",
    "agents",
    "claude",
    "mcp",
    "speech-to-text",
    "podcast",
    "interview"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "faster-whisper>=1.0.0",
    "torch",
]

[project.optional-dependencies]
web = [
    "gradio>=4.0.0",
]
clips = [
    "pydub>=0.25.0",
]
all = [
    "gradio>=4.0.0",
    "pydub>=0.25.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
augent = "augent.cli:main"
augent-web = "augent.web:main"
augent-mcp = "augent.mcp:main"

[project.urls]
Homepage = "https://github.com/AugentDevs/Augent"
Documentation = "https://github.com/AugentDevs/Augent#readme"
Repository = "https://github.com/AugentDevs/Augent"
Issues = "https://github.com/AugentDevs/Augent/issues"

[tool.setuptools.packages.find]
include = ["augent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.isort]
known-first-party = ["augent"]
