[metadata]
name = augent
version = 1.0.0
description = Local audio keyword search using faster-whisper
author = AugentDevs
license = MIT

[options]
packages = find:
python_requires = >=3.10
install_requires =
    faster-whisper>=1.0.0
    torch

[options.extras_require]
web =
    gradio>=4.0.0,<5.0.0
    huggingface-hub>=0.20.0,<0.24.0
clips =
    pydub>=0.25.0
all =
    gradio>=4.0.0,<5.0.0
    huggingface-hub>=0.20.0,<0.24.0
    pydub>=0.25.0

[options.entry_points]
console_scripts =
    augent = augent.cli:main
    augent-web = augent.web:main
    augent-mcp = augent.mcp:main

[options.packages.find]
include = augent*
